Fix styles: overflow

--- a/src/components/Content/ContentParts/ContentMain/ContentMain.module.css
+++ b/src/components/Content/ContentParts/ContentMain/ContentMain.module.css
@@ -1,5 +1,6 @@
 .Root {
 	position: relative;
+	overflow: hidden;
 }
 
 .items {
